--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
+MONGO_URL=mongodb+srv://admin:wwwwww@cluster0.udlxg.mongodb.net/Blog?retryWrites=true&w=majority&appName=Cluster0
 PORT=3002
 JWT_SECRET=49394fkvmfkn34pdk4o3-490f
